Fix crushing layout by footer overflow

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -124,6 +124,7 @@
 				align-self: center;
 				margin-left: 20px;
 				color: white;
+				word-break: break-all;
 			}
 		}
 	}
